assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');

html {
    margin: 0px;
    height: 100%;
    width: 100%;
}

body {
    font-family: 'Roboto', sans-serif;
    font-size: medium;
    background-color: #FFFFFF;
    color: #112D4E;
    margin: 0px;
    min-height: 100%;
    width: 100%;
}

header {
    display: flex;
    align-items: baseline;
    border-bottom: solid 3px #676785;
    background-color: #f2eeee;
    width: 100%;
}

#title {
    padding: 4px 2px 2px 2px;
    text-transform: capitalize;
    text-align: left;
    margin-left: 2%;
    color: #112D4E;
}

#title-text {
    font-size: 80%;
    display: inline-block;
}

#title-intro {
    font-size: 80%;
    margin-left: auto;
}

.navigation {
    color: #112D4E;
    font-weight: 600;
    margin-left: auto;
    text-transform: uppercase;
}

.navigation ul {
    list-style-type: none;
}

.navigation a {
    text-decoration: none;
}

.navigation li {
    display: inline-block;
    font-size: 90%;
    margin-left: 10px;
    margin-right: 10px;
}

.navigation li a {
    font-weight: 600;
    color: #112D4E;
}

.active {
    color: #6d86a1;
}

/* introduction text to bookclub and image */
.about {
    margin-bottom: 5px;
    padding: 1px;
    background-color: #FFFFFF;
}

.intro {
    font-size: 110%;
    font-weight: 600;
    color: #0F0F0D;
    margin-top: 20px;
    display: flex;
}

#bookclub {
    text-align: center;
    position: absolute;
    margin-left: 50px;
    color: #0F0F0D;
}

.bookclub-text {
    text-align: left;
    font-weight: 500;
    font-size: 100%;
    margin: auto;
}

.intro img {
    width: 80%;
    height: 80%;
}

/* Testimonials section in first page */
.testimonials {
    text-align: center;
}

.container {
    display: flex;
    align-items: center;
    margin-bottom: 3%;
}

.card {
    box-shadow: -1px -1px 10px 4px #464646;
    transition: 0.3s;
    border-radius: 6px;
    background-color: #DFE8F0;
    text-align: center;
    padding: 15px;
    margin: 1%;
}

footer {
    border-top: solid 3px #676785;
    background-color: #f2eeee;
    height: 50%;
}

.links {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    left: 0%;
    width: 100%;
    height: 50px;
    bottom: 1%;
    overflow: hidden;
}

.links h3 {
    text-align: center;
    padding: 5px;
    font-size: 130%;
    color: #112D4E;
}

.links i {
    font-weight: 600;
    font-size: 150%;
    text-align: center;
    margin-left: 20px;
    color: #112D4E;
}

.icons {
    display: flex;
    text-align: center;
    align-items: center;
    padding: 5px;
    color: #112D4E;
}

/* reading list page styling */
.read {
    text-align: center;
    margin: 10px;
    padding: 1px 10px 20px 5px;
}

.text-center {
    text-align: center;
    font-size: 110%;
    font-weight: 400;
    margin-bottom: 10px;
}

.books {
    display: block;
    white-space: normal;
    text-align: center;
}

.books ul {
    list-style: none;
}

.readinglist {
    display: inline-block;
    text-align: center;
}

.books li {
    border: #496377 solid 2px;
    margin-left: 2px;
    margin-bottom: 3px;
}

.books img {
    width: 200px;
    height: 300px;
    display: inline-block;
}

.books p {
    text-align: center;
    font-weight: 600;
    color: #20232a;
    text-decoration: underline;
}

.text-intro {
    text-align: center;
    font-size: 110%;
    font-weight: 600;
    color: #0F0F0D;
}

/*Contact */
.signup {
    text-align: center;
    font-size: 120%;
    color: #DBE2EF;
    background-color: #4a79b2;
    padding: 5px 10px;
}

.signup h2 {
    color: #DBE2EF;
}

input[type="text"] {
    padding: 10px;
    margin-bottom: 20px;
}

input[type="email"] {
    padding: 10px;
    margin-bottom: 20px;
}

input[type=submit] {
    padding: 3px 5px 4px 5px;
    font-size: 90%;
    text-transform: uppercase;
    color: #112D4E;
}

.meeting {
    background-color: #f2eeee;
    margin-bottom: 20px;
    padding: 5px 10px;
    display: flex;
    font-size: 100%;
}

.meeting h2 {
    text-align: center;
}

.meeting p {
    font-weight: 500;
    text-align: left;
}

#map {
    border: solid 3px #FFFFFF;
    margin-left: auto;
    width: 50%;
}

/*styling for header in confirmation.html*/
.response {
    font-size: 100%;
    text-align: center;
    font-weight: 600;
    color: #1d4069;
}

.response header {
    border-bottom: solid 3px #676785;
    background-color: #f2eeee;
    display: flex;
    align-items: stretch;
    flex-direction: column;
}

/* screens width 1200px and smaller */
@media screen and (max-width: 1200px) {

    header {
        display: block;
    }

    #title-text {
        font-style: italic;
    }

    .bookclub-text {
        text-align: center;
        margin: 3%;
    }

    #bookclub {
        text-align: center;
        position: relative;
        margin-left: 0;
        color: #112D4E;
    }

    .intro {
        display: block;
    }

    .intro img {
        width: 100%;
        height: 100%;
    }

    #title {
        text-align: center;
    }

    .container {
        display: block;

    }

    .card {
        margin-bottom: 10px;
    }

    .books {
        margin-right: 10%;
    }

    .signup {
        text-align: left;
        margin: auto;
    }

    .navigation {
        text-align: center;
    }

    .meeting {
        display: block;
    }

    #map {
        margin: auto;
        width: 100%;
    }

    input[type="text"] {
        margin-right: 100px;
    }

    footer {
        bottom: 0%;
    }

    .links {
        position: relative;
    }

    .links h3 {
        display: none;
        visibility: hidden;
        text-align: center;
        padding: 5px;
        font-size: 120%;
        color: #112D4E;
    }

    .text-intro {
        margin: 3%;
    }
}

/* screens width 600px and smaller */
@media screen and (max-width: 600px) {

    header {
        display: block;
    }

    #title-text {
        display: none;
    }

    .bookclub-text {
        text-align: center;
        margin: 3%;
    }

    #bookclub {
        text-align: center;
        position: relative;
        margin-left: 0px;
        color: #112D4E;
    }

    .intro {
        display: block;
    }

    .intro img {
        width: 100%;
        height: 100%;
    }

    #title {
        text-align: center;
    }

    .container {
        display: block;
        margin-right: 20px;
        margin-left: 20px;
    }

    .card {
        margin-bottom: 10px;
    }

    .books {
        margin-right: 10%;
    }

    .signup {
        text-align: left;
        margin: auto;
    }

    .navigation {
        text-align: center;
    }

    .meeting {
        display: block;
    }

    #map {
        margin: auto;
        width: 100%;
    }

    input[type="text"] {
        margin-right: 100px;
    }

    footer {
        bottom: 0%;
    }

    .links {
        position: relative;
    }

    .links h3 {
        display: none;
        visibility: hidden;
        text-align: center;
        padding: 5px;
        font-size: 120%;
        color: #112D4E;
    }

    .text-intro {
        margin: 3%;
    }
}

